addons/hubble-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`hubble.yourdomain.com`)
    kind: Rule
    services:
    - name: hubble-ui
      port: 80
  tls:
    secretName: hubble-tls-cert
